--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -4,25 +4,10 @@
     <div class="container">
       <!-- title -->
       <h1 class="display-3">Awesome App</h1>
-      <!-- subtitle -->
-      <p class="lead">This is a fantastic app.</p>
+
 
       <hr class="my-4">
-      <p>Want to know more? Join our mailing list</p>
 
-      <!-- cta -->
-      <div class="container">
-        <form class="form-inline justify-content-center">
-          <label class="sr-only" for="inlineFormInputGroupUsername2">Your Email</label>
-          <div class="input-group mb-2 mr-sm-2">
-            <div class="input-group-prepend">
-              <div class="input-group-text">@</div>
-            </div>
-            <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Your Email">
-          </div>
-          <button type="submit" class="btn btn-primary mb-2">Subscribe</button>
-        </form>
-      </div>
     </div>
   </div>
   <!-- /jumbotron -->
@@ -38,8 +23,8 @@
     <!-- about -->
     <!-- title -->
     <div class="pb-5">
-      <h3 class="display-4">Why this App is so awsome</h3>
-      <p>This is why this app is so awsome, you'll never need another one!</p>
+      <h3 class="display-4">Why this App is so awesome</h3>
+      <p>This is why this app is so awesome, you'll never need another one!</p>
     </div>
 
   </div>
@@ -48,7 +33,7 @@
 
     <div class="card">
       <div class="img-cover"><img
-          src="https://images.unsplash.com/photo-1475694867812-f82b8696d610?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+          src="../../../assets/images/soccer.png">
         <div class="icon"><svg width="23" height="18" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M0 9H22M12 1.5L20.9333 8.2C21.4667 8.6 21.4667 9.4 20.9333 9.8L12 16.5" stroke="black"
               stroke-width="3" />
@@ -70,7 +55,7 @@
 
     <div class="card">
       <div class="img-cover"><img
-          src="https://images.unsplash.com/photo-1519852476561-ec618b0183ba?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+          src="../../../assets/images/doctors.png">
         <div class="icon"><svg width="23" height="18" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M0 9H22M12 1.5L20.9333 8.2C21.4667 8.6 21.4667 9.4 20.9333 9.8L12 16.5" stroke="black"
               stroke-width="3" />
@@ -81,7 +66,7 @@
         <h3 class="text-center">Project Beta</h3>
         <p class="tdesc">Application that retrieves and displays a list and description of nearest doctors within the
           user's current location</p>
-        <a href="javascript:void()">See More <svg width="19" height="14" viewBox="0 0 23 18" fill="none"
+        <a href="javascript:void()" [routerLink]="['/doctors']">See More <svg width="19" height="14" viewBox="0 0 23 18" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M0 9H22M12 1.5L20.9333 8.2C21.4667 8.6 21.4667 9.4 20.9333 9.8L12 16.5" stroke="white"
               stroke-width="3" />
@@ -92,7 +77,7 @@
 
     <div class="card">
       <div class="img-cover"><img
-          src="https://images.unsplash.com/photo-1454391304352-2bf4678b1a7a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+          src="../../../assets/images/Codingpng.png">
         <div class="icon"><svg width="23" height="18" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M0 9H22M12 1.5L20.9333 8.2C21.4667 8.6 21.4667 9.4 20.9333 9.8L12 16.5" stroke="black"
               stroke-width="3" />
@@ -103,7 +88,7 @@
       <div class="desc">
         <h3 class="text-center">Project Alpha</h3>
         <p class="tdesc">Application that retrieves and displays the leaders on wakatime public leaderboard</p>
-        <a href="javascript:void()" >See More <svg width="19" height="14" viewBox="0 0 23 18" fill="none"
+        <a href="javascript:void()" [routerLink]="['/wakatime']">See More <svg width="19" height="14" viewBox="0 0 23 18" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M0 9H22M12 1.5L20.9333 8.2C21.4667 8.6 21.4667 9.4 20.9333 9.8L12 16.5" stroke="white"
               stroke-width="3" />
@@ -122,84 +107,15 @@
 
 
 
-<!-- download -->
-<section id="download">
-  <div class="jumbotron jumbotron-fluid mb-0">
-    <div class="container text-center">
-      <h4 class="display-4">Get the App</h4>
-      <p class="lead">Download MyApp for iPhone or Android</p>
-    </div>
 
-    <div class="container">
-      <div class="row justify-content-center">
-        <!-- ipod -->
-        <button href="#" class="downloadBtn">
-          <div class="row">
-            <div class="col-3">
-              <p class="appLogo"><i class="fab fa-apple"></i></p>
-            </div>
-            <div class="col-9">
-              <p>Available on the<br>
-                <span class="store">App Store</span>
-              </p>
-            </div>
-          </div>
-        </button>
-        <!-- android -->
-        <button href="#" class="downloadBtn">
-          <div class="row">
-            <div class="col-3">
-              <p class="appLogo"><i class="fab fa-google-play"></i></p>
-            </div>
-            <div class="col-9">
-              <p>Download from<br>
-                <span class="store">Google Play</span>
-              </p>
-            </div>
-          </div>
-        </button>
-
-      </div>
-    </div>
-
-
-
-  </div>
-</section>
-<!-- /download -->
 
 <!-- footer -->
 <footer id="contact">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-4 pr-3 pl-3">
-        <h5>Contact Us</h5>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat molestiae numquam illum esse reiciendis
-          cupiditate hic rerum, et unde. Voluptates rerum explicabo deleniti eos hic incidunt saepe tempore repellat
-          dicta!</p>
-      </div>
-      <div class="col-sm-4 pr-3 pl-3">
-        <h5>Privacy Settings</h5>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat molestiae numquam illum esse reiciendis
-          cupiditate hic rerum, et unde. Voluptates rerum explicabo deleniti eos hic incidunt saepe tempore repellat
-          dicta!</p>
-      </div>
-      <div class="col-sm-4 pr-3 pl-3">
-        <h5>Follow us</h5>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
-        <ul class="social">
-          <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
-          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
+
   <hr>
   <div class="row">
     <div class="container text-center">
-      <p class="small">©2021, No rights reserved</p>
+      <p class="small">Arnergy © 2021. All rights reserved</p>
     </div>
   </div>
 </footer>
